tests/reference/asr-expr13-81bdb5a.stderr
KeyboardInterrupt
The command 'python $DIR/src/bin/../runtime/lpython_parser.py $DIR/src/bin/../runtime/lpython_builtin.py $DIR/src/bin/../runtime/lpython_builtin.py49378D1' failed.
semantic error: The file '$DIR/src/bin/../runtime/lpython_builtin.py' failed to parse
 --> tests/expr13.py:9:9
  |
9 |     a = complex(3, 4) == complex(3., 4.)
  |         ^^^^^^^^^^^^^ 
